# foy

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: introduction.md
include/: my_module.h
scripts/: setup.sh
src/: main.cpp
src/lib/: my_module.cpp
